# parallelopedia

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run-server.sh
data/: .gitignore  Untitled.ipynb  extract-redirect-titles.sh  extract-titles.sh  join-enwiki-xml.sh  page-counts.ipynb  split-enwiki-xml.sh  titles-smaller.ipynb  titles.ipynb  words.ipynb
src/parallelopedia/: gpt2.py  gpt_oss.py  llm.py  server.py  trie_util.py  util.py  wiki.py  wikidata.py
src/parallelopedia/http/: __init__.py  constants.py  server.py
tests/http/: test_server.py
ui/: package-lock.json
ui/src/: App.scss  GPT2.jsx  LLM.jsx  Wiki.jsx
