[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line_length = 79
skip_string_normalization = true  # Keeps single/double quotes as they are
target_version = ['py314']        # Target a specific Python version
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parallelopedia"
version = "0.1.0"
description = "Parallelopedia library"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Trent Nelson" }]
dependencies = [
    "datrie",
    "numpy",
    "mwcomposerfromhell",
    "mwparserfromhell",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["parallelopedia*"]
