[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line_length = 79
skip_string_normalization = true  # Keeps single/double quotes as they are
target_version = ['py314']        # Target a specific Python version
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parallelopedia"
version = "0.1.0"
description = "Parallelopedia library"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Trent Nelson" }]
dependencies = [
    "datrie",
    "numpy",
    "mwcomposerfromhell",
    "mwparserfromhell",
    # Runtime deps for GPT-OSS/GPT-2. Torch is intentionally NOT listed here
    # to avoid pip pulling non-CUDA13 (cu12) wheels during editable installs.
    "transformers",
    "accelerate",
    "safetensors",
    "huggingface_hub",
    "sentencepiece",
    "tiktoken",
]

[project.optional-dependencies]
# Optional CUDA 13.0 extras. Use with the CUDA 13.0 wheel index, e.g.:
#   pip install -e .[cuda130] --index-url https://download.pytorch.org/whl/cu130
cuda130 = [
    "torch==2.9.*",
    "torchvision==0.24.*",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["parallelopedia*"]
